--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
     background-attachment: fixed;
     font-family: 'OpenDyslexic';
 }
+
 img {
-    float: left;
     border: 1px solid;
     height: 200px;
     filter: grayscale(100%);
-}
+    }
 
 .about {
     background-color: lightblue;
@@ -25,6 +25,41 @@ img {
     margin: 20px;
     justify-content: center;
     align-items: center;
-    display: flex;
-    position: fixed;
+    display: flex; 
+}
+
+header {
+    background-color: lightblue;
+    text-align: center; 
+    margin: 20px;
+    color: black; 
+    height: 60px;  
+    border: 1px solid; 
+    top: 0; 
+    position: sticky; 
+    z-index: 1;
+
+}
+
+header ul {
+    list-style-type: none;
+    padding: 0; 
+}
+
+header li {
+    display: inline; 
+}
+
+@media (max-width: 600px) {
+    .about {
+        height: 70%;
+        font-size: 13px;
+    }
+    header {
+        height: 100px;
+    }
+    img {
+        height: 100px;
+    }
+
 }
