--- a/style.css
+++ b/style.css
@@ -7,11 +7,15 @@ body {
     background-image: linear-gradient(cornflowerblue, palegreen);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: 'OpenDyslexic';
+    font-family: 'OpenDyslexic', Arial;
+}
+
+a {
+    text-decoration: none;
 }
 
 img {
-    border: 1px solid;
+    border-radius: 25px;
     height: 200px;
     filter: grayscale(100%);
     }
@@ -26,19 +30,19 @@ img {
     justify-content: center;
     align-items: center;
     display: flex; 
+    border-radius: 25px; 
 }
 
-header {
+.navbar {
     background-color: lightblue;
     text-align: center; 
     margin: 20px;
-    color: black; 
     height: 60px;  
     border: 1px solid; 
     top: 0; 
     position: sticky; 
     z-index: 1;
-
+    border-radius: 25px;
 }
 
 header ul {
@@ -48,6 +52,30 @@ header ul {
 
 header li {
     display: inline; 
+}
+
+.footer { 
+    background-color: lightblue;
+    text-align: center; 
+    z-index: 1;
+    margin: 20px;
+    border-radius: 25px;
+    position: sticky;
+    bottom: 0; 
+    border: 1px solid; 
+}
+
+footer ul {
+    list-style-type: none;
+    padding: 0; 
+}
+
+footer li {
+    display: inline; 
+}
+
+#copyright {
+    font-size: 0.875em; 
 }
 
 @media (max-width: 600px) {
