--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body {
     font-family: 'OpenDyslexic', Arial;
 } 
 
-/* a {
+a {
     text-decoration: none;
     color: oklch(59.6% 0.145 163.225);
-} */
+} 
 
-/* a:visited {
+ a:visited {
     color: oklch(43.2% 0.095 166.913);
 }
 
@@ -21,7 +21,26 @@ a:hover {
     color: black;
 }
 
-#aboutphoto {
+.header {
+    background-color: oklch(98.4% 0.014 180.72);
+    text-align: center; 
+    margin: 20px;
+    border: 1px solid; 
+    top: 0; 
+    position: sticky; 
+    z-index: 1;
+    border-radius: 25px;
+}
+
+header ul {
+    list-style-type: none;
+    padding: 0; 
+}
+
+header li {
+    display: inline; 
+} 
+/* #aboutphoto {
     border-radius: 25px;
     height: 200px;
     filter: grayscale(100%);
@@ -71,27 +90,9 @@ a:hover {
 #firsttetris_preview {
     height: 200px;
     border: 1px solid; 
-}
+} */
 
-.header {
-    background-color: oklch(98.4% 0.014 180.72);
-    text-align: center; 
-    margin: 20px;
-    border: 1px solid; 
-    top: 0; 
-    position: sticky; 
-    z-index: 1;
-    border-radius: 25px;
-}
 
-header ul {
-    list-style-type: none;
-    padding: 0; 
-}
-
-header li {
-    display: inline; 
-}
 
 /* .footer { 
     background-color: oklch(98.4% 0.014 180.72);
@@ -104,7 +105,7 @@ header li {
     border: 1px solid; 
 } */
 
-footer ul {
+/* footer ul {
     list-style-type: none;
     padding: 0; 
 }
@@ -115,7 +116,8 @@ footer li {
 
 #copyright {
     font-size: 0.875em; 
-}  
+}   */
+
 /* tablet response */ 
 @media screen and (min-width: 800px) and (max-width: 1000px) { 
 
