--- a/style.css
+++ b/style.css
@@ -81,14 +81,14 @@
      flex-direction: column;
      border-radius: 25px;
 
-}
+ }
 
-#about-header { 
-    border: 1px solid;
-    border-radius: 25px;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-}
+ #about-header {
+     border: 1px solid;
+     border-radius: 25px;
+     padding-bottom: 30px;
+     margin-bottom: 20px;
+ }
 
  #projects-table {
      display: none;
@@ -98,7 +98,22 @@
      display: none;
  }
 
+ #project-list-container {
+     background-color: oklch(98.4% 0.014 180.72);
+     border: 1px solid;
+     border-radius: 25px;
+     margin: 20px;
+     padding: 20px;
+     display: flex;
+     flex-direction: column;
+ }
 
+ .project-list-item {
+     border: 1px solid;
+     border-radius: 25px;
+     padding: 20px;
+     margin: 20px;
+ }
 
  .footer {
      background-color: oklch(98.4% 0.014 180.72);
@@ -132,7 +147,7 @@
 
      .about {
          display: grid;
-         grid-template-columns: 30% 60%; 
+         grid-template-columns: 30% 60%;
          justify-content: center;
          align-items: center;
      }
@@ -142,14 +157,33 @@
      }
 
      #about-header {
-         width: 100%; 
+         width: 100%;
          border: 1px solid;
-         border-radius: 25px; 
-         grid-column-start: 2; 
+         border-radius: 25px;
+         grid-column-start: 2;
          margin-bottom: 0px;
      }
+
      #about-desc {
-        grid-column: span 2; 
+         grid-column: span 2;
+     }
+
+     #project-list-container {
+         background-color: oklch(98.4% 0.014 180.72);
+         border: 1px solid;
+         border-radius: 25px;
+         margin: 20px;
+         padding: 20px;
+         display: flex;
+         flex-direction: row;
+         justify-content: center;
+     }
+
+     .project-list-item {
+         border: 1px solid;
+         border-radius: 25px;
+         padding: 20px;
+         margin: 20px;
      }
  }
 
@@ -159,9 +193,9 @@
          font-size: 20px;
      }
 
-      .about {
+     .about {
          display: grid;
-         grid-template-columns: 30% 60%; 
+         grid-template-columns: 30% 60%;
          justify-content: center;
          align-items: center;
      }
@@ -171,14 +205,15 @@
      }
 
      #about-header {
-         width: 100%; 
+         width: 100%;
          border: 1px solid;
-         border-radius: 25px; 
-         grid-column-start: 2; 
+         border-radius: 25px;
+         grid-column-start: 2;
          margin-bottom: 0px;
      }
+
      #about-desc {
-        grid-column: span 2; 
+         grid-column: span 2;
      }
 
      .projects {
@@ -214,6 +249,14 @@
          display: inline;
          height: 200px;
          border: 1px solid;
+     }
+     
+     #project-list-container {
+         display: none;
+     }
+
+     .project-list-item {
+         display: none;
      }
 
  }
